# applefind

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: popular-repos.md  real-repos.md
docs/: app.js  index.html  styles.css
scripts/: compare_fff.py  compare_fff_content.py  compare_rg_content.py  materialize_git_tree.py
src/: content.rs  dataset.rs  index.rs  lib.rs  main.rs  query.rs
