[package]
name = "applefind"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Fast indexed path search core in Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Aryagm/applefind"
homepage = "https://github.com/Aryagm/applefind"
keywords = ["search", "fuzzy", "index", "cli"]
categories = ["algorithms", "command-line-utilities"]

[dependencies]
ignore = "0.4"
rayon = "1.11"
